examples/contracts.salt
// =============================================================================
// Contracts — Formal Verification with Z3
// =============================================================================
// Demonstrates: requires(), ensures(), compile-time verification
//
// Salt integrates the Z3 theorem prover directly into the compiler.
// Preconditions are PROVEN at compile time — not checked at runtime.
// =============================================================================

package main

// The compiler proves that every call to safe_div has b != 0.
// If you call safe_div(x, 0), it's a COMPILE-TIME error.
fn safe_div(a: i32, b: i32) -> i32
    requires(b != 0)
{
    return a / b;
}

// Verified bounds-checked access
fn array_get(arr: &[i32; 10], idx: i32) -> i32
    requires(idx >= 0 && idx < 10)
{
    return arr[idx as i64];
}

fn main() -> i32 {
    // These calls pass verification — Z3 can prove the preconditions:
    let result = safe_div(100, 7);      // 7 != 0 ✓
    
    let data: [i32; 10] = [0; 10];
    let val = array_get(&data, 5);      // 5 >= 0 && 5 < 10 ✓

    // This would be a COMPILE-TIME ERROR (uncomment to see):
    // let bad = safe_div(100, 0);       // error: violates requires(b != 0)
    // let oob = array_get(&data, 15);   // error: violates requires(idx < 10)
    
    println("✓ all contracts verified at compile time");
    return 0;
}
